--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -199,7 +199,7 @@
             android:layout_alignStart="@+id/inventory"
             android:layout_marginBottom="28dp"
             android:background="@drawable/menu2"
-            android:onClick="toggleMenu"
+            android:onClick="showJob"
             map:layout_constraintBottom_toBottomOf="parent"
             map:layout_constraintEnd_toEndOf="parent"
             map:layout_constraintHorizontal_bias="0.939"
@@ -259,6 +259,18 @@
             android:text="  items"
             android:textColor="#def9f8"
             android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/Qtimer"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_alignTop="@+id/questText"
+            android:layout_toStartOf="@+id/healthbar"
+            android:background="#40efe9e9"
+            android:textAllCaps="true"
+            android:textSize="40dp"
+            tools:layout_editor_absoluteX="125dp"
+            tools:layout_editor_absoluteY="351dp" />
 
     </RelativeLayout>
 
